Move panel to top, 'clock' to popovers and remove expanding
Basically it's no longer maynard, but fairly usable as an emergency shell...

--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -9,6 +9,8 @@ maynard_SOURCES =				\
 	app-icon.h				\
 	clock.c					\
 	clock.h					\
+	sound.c					\
+	sound.h					\
 	favorites.c				\
 	favorites.h				\
 	shell-app-system.c			\
