Switch to meson

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,6 @@
-*.[ao]
-*.gcda
-*.gcno
-*.gcov
-*.l[ao]
-*.loT
-*.orig
-*.pc
-*.py[co]
-*.rej
-*.sw[op]
 *~
 *#
 .#*
-.deps
-.libs
-Makefile
-Makefile.in
-_gen
-/aclocal.m4
-/autom4te.cache
-/compile
-/config.cache
-/config.guess
-/config.h
-/config.h.in
-/config.log
-/config.status
-/config.sub
-/configure
-/depcomp
-/install-sh
-/libtool
-/ltmain.sh
-/m4
-/missing
-/stamp-h1
-/maynard-*.tar.xz
 /maynard
-shell/*-client-protocol.h
-shell/*-server-protocol.h
-shell/*-protocol.c
-shell/mod-shell-helper-protocol.c
-shell/maynard-resources.c
-shell/maynard-resources.h
-shell/maynard
-data/gschemas.compiled
-data/org.raspberrypi.maynard.gschema.valid
-data/org.raspberrypi.maynard.gschema.xml
-po/POTFILES
-po/stamp-it
 .vscode/
+build/
