Rename to reflect new purpose

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -33,8 +33,8 @@ libmaynard_sources = [
     'mnd-favorites-button.h',
     'mnd-favorites.c',
     'mnd-favorites.h',
-    'shell-app-system.c',
-    'shell-app-system.h',
+    'mnd-app-list-model.c',
+    'mnd-app-list-model.h',
     'panel.c',
     'panel.h',
     'mnd-launcher.c',
